--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
 dependencies {
     implementation 'com.google.guava:guava:28.0-jre'
     testImplementation 'junit:junit:4.12'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    
 }
 
 application {
