--- a/buzzicamp-server/build.gradle
+++ b/buzzicamp-server/build.gradle
@@ -11,6 +11,7 @@ repositories {
 dependencies {
     implementation 'com.google.guava:guava:28.0-jre'
     testImplementation 'junit:junit:4.12'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
 
 application {
