--- a/buzzicamp-client/build.gradle
+++ b/buzzicamp-client/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4'
 }
 
 application {
