--- a/buzzicamp-server/build.gradle
+++ b/buzzicamp-server/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation 'com.google.guava:guava:28.0-jre'
     testImplementation 'junit:junit:4.12'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4'
 }
 
 application {
