--- a/buzzicamp-server/build.gradle
+++ b/buzzicamp-server/build.gradle
@@ -9,6 +9,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.mybatis:mybatis:3.5.4'
     implementation 'com.google.guava:guava:28.0-jre'
     testImplementation 'junit:junit:4.12'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
